# cweqgen

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
cweqgen/: __init__.py  converters.py  definitions.py  docstrings.py  equations.py  reference.py
cweqgen/eqnfiles/: brakingindex.yaml  characteristicage.yaml  ellipticityspindown.yaml  gwluminosity.yaml  h0.yaml  h0spindown.yaml  massquadrupole.yaml  spindownluminosity.yaml
cweqgen/sphinx/: __init__.py  utils.py
docs/: .gitignore  api.rst  conf.py  definitions.rst  examples.ipynb  index.rst
