[metadata]
name = cweqgen
author = Matthew Pitkin
author_email = matthew.pitkin@ligo.org
description = A Python module for generating common equations used in continuous gravitational-wave analyses
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ligo.org/CW/software/CWEquationGenerator
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6, <4
setup_requires =
    setuptools >= 38.2.5
    setuptools_scm
    wheel
install_requires =
    astropy
    matplotlib
    numpy
    sympy
packages = find:

[bdist_wheel]
universal = 1

[options.extras_require]
docs =
    autodoc
    nbsphinx
    numpydoc
    pydata-sphinx-theme
    recommonmark
    sphinx >= 2.0
    sphinx-panels
    sphinxcontrib-napoleon
